--- a/templates/dashboard/components/sidebar.html
+++ b/templates/dashboard/components/sidebar.html
@@ -60,6 +60,17 @@
           <span class="font-medium">Manage Users</span>
         </a>
         <a
+          href="{% url 'dashboard:configure_requests' %}"
+          class="flex items-center gap-3 px-3 py-2 rounded-lg {% if request.resolver_match.view_name == 'dashboard:configure_requests' %} text-sky-600 bg-sky-100 {% else %} text-gray-700 hover:bg-gray-100 {% endif %}"
+        >
+          <img
+            src="{% if request.resolver_match.view_name == 'dashboard:configure_requests' %}{% static 'images/sidebar/configure_requests_highlighted.svg' %}{% else %}{% static 'images/sidebar/configure_request.svg' %}{% endif %}"
+            alt="Configure Requests Icon"
+            class="w-5 h-5"
+          />
+          <span class="font-medium">Configure Requests</span>
+        </a>
+        <a
           href="{% url 'dashboard:tickets' %}"
           class="flex items-center gap-3 px-3 py-2 rounded-lg {% if request.resolver_match.view_name == 'dashboard:tickets' %} text-sky-600 bg-sky-100 {% else %} text-gray-700 hover:bg-gray-100 {% endif %}"
         >
@@ -124,9 +135,20 @@
       <div
         class="px-3 py-1 text-gray-400 text-xs font-semibold tracking-tight"
       >
-        System
+        Analytics
       </div>
       <div class="space-y-1">
+        <a
+          href="{% url 'dashboard:performance' %}"
+          class="flex items-center gap-3 px-3 py-2 rounded-lg {% if request.resolver_match.view_name == 'dashboard:performance' %} text-sky-600 bg-sky-100 {% else %} text-gray-700 hover:bg-gray-100 {% endif %}"
+        >
+          <img
+            src="{% if request.resolver_match.view_name == 'dashboard:performance' %}{% static 'images/sidebar/performance_dashboard_highlighted.svg' %}{% else %}{% static 'images/sidebar/performance_dashboard.svg' %}{% endif %}"
+            alt="Performance Icon"
+            class="w-5 h-5"
+          />
+          <span class="font-medium">Performance</span>
+        </a>
         <a
           href="{% url 'dashboard:feedback_inbox' %}"
           class="flex items-center gap-3 px-3 py-2 rounded-lg {% if request.resolver_match.view_name == 'dashboard:feedback_inbox' %} text-sky-600 bg-sky-100 {% else %} text-gray-700 hover:bg-gray-100 {% endif %}"
